--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "better-sqlite3": "^7.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "fastify-static": "^4.6.1",
+    "handlebars": "^4.7.7",
+    "hbs": "^4.2.0",
+    "moment": "^2.29.1",
+    "point-of-view": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
